Fix alignment in the tables of the raw order data

--- a/dashboard/static/css/app.less
+++ b/dashboard/static/css/app.less
@@ -162,14 +162,12 @@ td.score_PASS {
 td.score_FAIL {
   color: red;
 }
-
 td.score_WEB {
   color: @chai-green;
 }
 td.score_PAPER {
   color: red;
 }
-
 .filter-title {
   padding-left: 0px;
 
@@ -375,6 +373,19 @@ hr {
 .limit-table {
 }
 .modal-content {
+  table {
+    tr {
+      th.left {
+        text-align: left;
+      }
+      th.center {
+        text-align: center;
+      }
+      td {
+        text-align: left;
+      }
+    }
+  }
   .table-condensed {
     tr {
       td {
